src/index.css
@import url('./assets/fonts/css/satoshi.css');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  scroll-behavior: smooth;
  font-family: Satoshi-Regular;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}



body {
  display: flex;
  flex-direction: column;
  isolation: auto;
}

#root {
  isolation: auto;
  flex-grow: 1;
  background: #F4F0E4;
}

p {
  font-family: Satoshi-Regular;
  font-size: 1rem;
}

.container {
  min-height: 100dvh;
  display: grid;
  grid-template-rows: auto 1fr auto;
  padding: 1rem;
  gap: 4rem;
}

section {
  scroll-margin-top: 100px;
}



/* nav css */

.desktop-nav-links {
  display: none;
}


nav {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  /* width: calc(100% - 2rem); */
  background: rgba(255, 255, 255, 0.7);
  position: fixed;
  backdrop-filter: blur(5px);
  top: 0;
  left: 0;
  width: 100%;
  padding: 1rem;
  /* height: 100px; */
  /* border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px; */
  /* height: 80px; */
  z-index: 100;

 
}


.nav-bar-container {
  display: flex;
  justify-content: space-between;
  align-content: center;
  position: relative;
}

.nav-bar-container .close,
.nav-bar-container .open {
  position: absolute;
  top: 0;
  right: 0;
  animation: spin-out 0.4s ease forwards;
}

.nav-bar-container .close.visible, .nav-bar-container .open.visible {
  animation: spin-in 0.4s ease forwards;
  transition-delay: 0.3s;
}

@keyframes spin-in {
  0% {
    opacity: 0;
    transform: scale(0.5);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes spin-out {
  0% {
    opacity: 1;
    transform: scale(1);

  }
  100% {
    opacity: 0;
    transform: scale(0);
  }
}







.nav-links-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 0;
  opacity: 0;
  transition: height 0.3s ease, opacity 0.5s ease;
  transition-delay: .1s;
}

.nav-links-container.open {
  height: 15em; 
  opacity: 1;
  transition: height 0.3s ease, opacity 0.5s ease;

  /* display: flex; */
}

.nav-links-container a {
  margin: 0.5rem;
  color: black;
  text-decoration: none;
  opacity: 0;
  transition: opacity .5s ease-out;
}

.nav-links-container a.open {
  opacity: 1;
}

/* .nav-links-container a:focus-visible {
  text-decoration: underline;
} */

/* Header Styling */

#sidebar-active {
  display:none;
}

.profile-img {
  height: 185px;
  width: 185px;
}

header {
  margin-top: 8rem;
  display: flex;
  flex-direction: column;
}

.personal-links {
  display: flex;
  flex-direction: row;
  margin-top: 1.5rem;
  gap: 1rem;
}

.personal-links svg {
  height: 30px;
  width: 30px;
}

.personal-links button {
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 100%;
}


header h1 {
  font-family: Satoshi-Variable;
  font-size: 2.44rem;
  font-weight: 900;
  letter-spacing: -1px;
  line-height: 1em; 

}

.accent {
  margin-top: 2.5rem;
}




.sub-heading {
  margin-top: .75rem;
  font-family: Satoshi-Regular;
  color: #555555;
}

.accent {
  color: #FF634A;
}

span {
  color: #FF634A;
  font-family: Satoshi-Medium;
  background-color: none;
}

main {
  display: flex;
  flex-direction: column;
  gap: 4rem;
  overflow: hidden;
}

h2 {
  font-family: Satoshi-Bold;
  font-size: 1.95rem;
  
}

/* Skills styling */

.description {
  font-family: Satoshi-Regular;
  font-size: 1rem;
  margin-top: 1.5rem;
}

.carousel-container {
  width: 100%;
  overflow: hidden;
  margin-top: 1.5rem;
}

.card {
  flex: 0 0 auto;
  flex-direction: column;
  width: 7rem;
  height: 7rem;
  background: #FFFCF8;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 20px;
  padding: 2rem;

}

.carousel-track {
  display: flex;
  width: max-content;
  animation: scroll 15s linear infinite;
  gap: 1rem;
  padding-right: 1rem;
}

@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%)
  }
}



.tech-logo {
  height: 60px;
  width: 60px;
}

.skill-description {
  font-family: Satoshi-Regular;
  font-size: 1rem;
}


/* Project Section Styling */

.project-card {
  margin-top: 1.5rem;
  display: flex;
  flex-direction: column;
  background: #FFFCF8;
  padding: 1.5rem;
  gap: 2rem;
  /* border: 1px solid black; */
  border-radius: 20px;

 
}


.project-links {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  gap: .75rem;

}


h3 {
  font-family: Satoshi-Medium;
  font-size: 1.56rem;

}

.project-tech-stack {
  display: flex;
  gap: .5rem;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
}

.project-tech-stack p {
  display: flex;
  font-family: Satoshi-Regular;
  font-size: 0.8rem;
  border: solid 1px #FF634A;
  border-radius: 20px;
  padding: .25rem .5rem;
  width: auto;
  align-items: center;
  justify-content: center;
  background-color: rgba(255, 99, 74, 0.1);
  color: #FF634A;
}

.project-links button, header button {
  display: flex;
  flex-direction: row;
  /* height: 2rem; */
  width: 6rem;
  
  font-family: Satoshi-Regular;
  justify-content: center;
  align-items: center;
  gap: .5rem;
  padding: .1rem .5rem;
  transition: background-color 0.25s ease, color 0.25s ease, transform 0.15s ease;
}

.live-button, .github {
  color: white;
  background-color: #FF634A;
  border: none;
  border-radius: 5px;
}

.code-button, .linkedin{
  background-color: #FFFCF8;
  border: solid 1px #FF634A;
  color: #FF634A;
  border-radius: 5px;

}

a {
  text-decoration: none;
}

.project-card img {
  border-radius: 20px;
  box-shadow: 0 5px 6px 1px rgba(0, 0, 0, .2);
}

/* education css */


.timeline {
  display: flex;
  flex-direction: column;
  gap: 5rem;
  border-left: .15rem solid black;
  padding-left: 1rem;
  margin-top: 1.5rem;
  margin-left: 1rem;

}

.time::before {
  position: absolute;
  content: "";
  width: .5rem;
  height: .5rem;
  background-color: #FF634A;
  border-radius: 50%;
  top: 20px;
  left: -21px;  
}

.time {
  padding: 1rem 1rem;
  position: relative;
  /* border: black solid 2px; */
  /* border-top-left-radius: 15px; */
  border-radius: 0 30px 30px 30px;
  background: #FFFCF8;

}

h4 {
  font-family: "Satoshi-Italic";
  font-style: italic;
  font-size: 1.25rem;
  margin-top: 1rem;
}

.timeline p {
  opacity: 65%;
}

.date {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-family: Satoshi-Medium;
  font-size: 1.56rem;
}


/* Footer */
footer {
  /* background-color: white; */
  border-top: 1px solid black;
  display: flex;
  flex-direction: row;
  align-items: center;
}

footer p {
    font-size: .8rem;
    opacity: 70%;
    margin-left: 5px

}

/* contact styling */

form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-top: 1.5rem;
}

form input {
  height: 2rem;
  border: none;
  border-radius: .25rem;
  width: 50%;
  padding: 0.5rem;
  font-family: Satoshi-Regular;
}

form textarea {
  height: 10rem;
  border: none;
  border-radius: .25rem;
  padding: 0.5rem;
  font-family: Satoshi-Regular;
  resize: none;

}

form input:focus, form textarea:focus {
  outline: 1px solid rgba(255, 99, 74, .5);
  outline-offset: -1px;
}

form button {
  display: flex;
  flex-direction: row;
  color: white;
  background-color: #FF634A;
  height: 2rem;
  width: 6rem;
  border: none;
  border-radius: 5px;
  font-family: Satoshi-Medium;
  justify-content: center;
  align-items: center;
  gap: .5rem;
  padding: .1rem .5rem;
}







@media (min-width: 992px) {

  html {
    font-size: 18px;
  }

  .nav-bar-container input, .nav-bar-container label {
    display: none;
  }


/* 
tips for hover animation:
- make element relative
- create new content with ::after using content: ""
  - give a background color and width or desired styling
  - start with a scale of 0. this case x
  - move it using top bottom left right to 0 to place properly
  - create transition with property as transform
- create hover affect only on the ::after pseudo class.
  - transform scale to 1 depending on choice. 

*/
  .desktop-nav-links {
    display: block;
    text-decoration: none;
    color: black;
    position: relative;
    /* animation: red 1s ease-out; */
  }

 

  .desktop-nav-links::after {
    content: '';
    position: absolute;
    width: 100%;
    background-color: black;
    height: 1px;
    bottom:0;
    left: 0;
    transform: scaleX(0);
    transition: transform .3s ease-out;
  }

  .desktop-nav-links:hover::after {
    transform: scaleX(1);
  }

  .desktop-nav-links:focus {
    transform: scale(1.25);
    transition: transform .2s ease-out;
  }

  .nav-bar-containter {
    flex-direction: row;
  }

  .desktop-nav-container {
    display: flex;
    gap: 2rem;

    
  }

  .time::before {
  left: -24px;  
}

.profile-img {
  height: 300px;
  width: 300px;
}


header {
  justify-content: center;
  align-items: center;
  text-align: center;
  /* margin: auto; */
  text-wrap: balance;
  margin-top: 8rem;
}

#about {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  margin: auto;
}

#about, #education, #skills, #projects {
  width: 700px;
  text-align: center;
  margin: auto;
}

#contact {
  width: 60%;
  margin: auto;
  text-align: center;
 
  
}

form {
  justify-content: center;
  align-items: center;
}

textarea {
  width: 100%;
}

.date{
  justify-content: center;
  
}

.time {
  width: 610px;
}

.project-tech-stack {
  justify-content: center;

}

.project-links {
  justify-content: center;
}

.project-description {
  text-wrap: balance;
}

.live-button:hover, .github:hover {
  background-color: #F77F6C;
}

.live-button:active, .github:active {
  background-color: #EA533A;
}

.code-button:hover, .linkedin:hover {
  background-color: #FCF7F7;
}

.code-button:active, .linkedin:active {
  background-color: #F0F0F0;
}

/* .code-button {
  background-color: black;
} */

}

